Fix word-spacing

--- a/source/assets/stylesheets/components/_button.sass
+++ b/source/assets/stylesheets/components/_button.sass
@@ -27,6 +27,7 @@
   padding-right: $btn-space-s
   position: relative
   text-transform: uppercase
+  word-spacing: 0
 
   &::before
     border-color: $btn-background transparent transparent transparent
