--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -34,6 +34,7 @@ li
 
 pre
   font-family: $b-fontFamily-mono
+  word-spacing: 0
 
 // ----- Headings ----- //
 
